Added findById, findAll and create methods with test

--- a/pom.xml
+++ b/pom.xml
@@ -89,7 +89,7 @@
                     <configuration>
                         <archive>
                             <manifest>
-                                <mainClass>br.edu.infnet.restaurant.Main</mainClass>
+                                <mainClass>br.edu.infnet.restaurant.Application</mainClass>
                             </manifest>
                         </archive>
                     </configuration>
